@@ -468,6 +468,7 @@ AC_CHECK_SIZEOF(char)
 AC_CHECK_SIZEOF(short)
 AC_CHECK_SIZEOF(int)
 AC_CHECK_SIZEOF(long)
+AC_CHECK_SIZEOF(long long)
 AC_C_CHAR_UNSIGNED
 
 type_name()
@@ -488,6 +489,10 @@ type_name()
     echo "long"
     exit
   fi
+  if expr "$ac_cv_sizeof_long_long" '>=' "$1" >/dev/null; then
+    echo "long long"
+    exit
+  fi
   echo "long"
 }
 
@@ -505,14 +510,19 @@ AC_MSG_RESULT($TYPE_WORD)
 AC_MSG_CHECKING(type name for dword)
 TYPE_DWORD=`type_name 4`
 AC_MSG_RESULT($TYPE_DWORD)
+AC_MSG_CHECKING(type name for qword)
+TYPE_QWORD=`type_name 8`
+AC_MSG_RESULT($TYPE_QWORD)
 
 AC_DEFINE_UNQUOTED(TYPE_BYTE,  $TYPE_BYTE,  [XXX])
 AC_DEFINE_UNQUOTED(TYPE_WORD,  $TYPE_WORD,  [XXX])
 AC_DEFINE_UNQUOTED(TYPE_DWORD, $TYPE_DWORD, [XXX])
+AC_DEFINE_UNQUOTED(TYPE_QWORD, $TYPE_QWORD, [XXX])
 
 AC_DEFINE_UNQUOTED(TYPE_UBYTE,  unsigned $TYPE_CHAR,  [XXX])
 AC_DEFINE_UNQUOTED(TYPE_UWORD,  unsigned $TYPE_WORD,  [XXX])
 AC_DEFINE_UNQUOTED(TYPE_UDWORD, unsigned $TYPE_DWORD, [XXX])
+AC_DEFINE_UNQUOTED(TYPE_UQWORD, unsigned $TYPE_QWORD, [XXX])
 
 # Checking whether byte ordering is bigendian
 # ===========================================================================
